dist/1.0/bin/sample/retrieveUnpackaged/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Attribute_Set_Type__c</fullName>
        <label>Attribute Set Type</label>
        <referenceTo>Attribute_Set_Type__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_in_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created in Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_in_Extranet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created in Extranet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dimension_Dictionary__c</fullName>
        <label>Dimension Dictionary</label>
        <referenceTo>Dimension_Dictionary__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <label>From Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GTS_Location__c</fullName>
        <description>Products will be marked with multipicklist field GTS Location (GTS Poland, GTS Slovakia etc. ) mainly to separate Products for SK and other countries</description>
        <inlineHelpText>Please choose countires for this product</inlineHelpText>
        <label>GTS_Location</label>
        <picklist>
            <picklistValues>
                <fullName>GTS Czech Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Slovakia</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Integration_ID__c</fullName>
        <displayFormat>1{000000}</displayFormat>
        <externalId>true</externalId>
        <label>Integration ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>International__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Distance zone - International</description>
        <inlineHelpText>Distance zone - International</inlineHelpText>
        <label>International</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Order__c</fullName>
        <defaultValue>0</defaultValue>
        <description>DAVO field - it is required in Billing: Indicated the order on which bundle will be printed on invoice document</description>
        <inlineHelpText>Indicated the order on which bundles will be printed on invoice document</inlineHelpText>
        <label>Invoice Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Label_CZE__c</fullName>
        <label>Label (Czech)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_Eng__c</fullName>
        <label>Label (English)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_HUN__c</fullName>
        <label>Label (Hungarian)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_POL__c</fullName>
        <label>Label (Polish)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_ROU__c</fullName>
        <label>Label (Romanian)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_SVK__c</fullName>
        <label>Label (Slovak)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_AST__c</fullName>
        <description>Technical field which will remember the last related AST, which should be disconnected in Durian. The field will be automatically clean after succesfull synchronization</description>
        <label>Last AST</label>
        <referenceTo>Attribute_Set_Type__c</referenceTo>
        <relationshipLabel>Products (Last AST)</relationshipLabel>
        <relationshipName>Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Modified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if the definition has been modified or not.</description>
        <label>Modified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>National__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Distance zone - National</description>
        <inlineHelpText>Distance zone - National</inlineHelpText>
        <label>National</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Node_A_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if Address Node A is required on request for this product</description>
        <label>Node A Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Node_B_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if Address Node B is required on request for this product</description>
        <label>Node B Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_AST__c</fullName>
        <description>Technical field, which stores the previously assigned AST</description>
        <label>Previous AST</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prioritatization_Group__c</fullName>
        <description>Added during Colorado Sprint 2</description>
        <inlineHelpText>A base for case prioritatization algorithm. Services from K1 group bounded with the case, will have greater priority, than services with K3 value.</inlineHelpText>
        <label>Prioritatization Group</label>
        <picklist>
            <picklistValues>
                <fullName>K1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K3</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Retail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Product available for Retail</description>
        <label>Retail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Source Record Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Synchronization_Log__c</fullName>
        <label>Synchronization Log</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Synchronized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether the product definition has been send to external systems or not;</description>
        <label>Synchronized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>To Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type_of_Service_for_Contract__c</fullName>
        <description>Selected Type Of Service will be presented on printed Contract</description>
        <inlineHelpText>Selected Type Of Service will be presented on printed Contract</inlineHelpText>
        <label>Type of Service for Contract</label>
        <picklist>
            <picklistValues>
                <fullName>Direct Voice-Public Telephone Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Access-Connection to Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leased Line-Lease of Data Circuits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP VPN-Virtual Private Data Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Phone-Supp. Telephone Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared Cost-Supp. Telephone Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wholesale__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Product available for Wholesale</description>
        <label>Wholesale</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Retail__c</columns>
        <columns>Wholesale__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>GTS_Location__c</columns>
        <columns>Integration_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>GTS_SK_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Integration_ID__c</columns>
        <columns>Label_Eng__c</columns>
        <columns>Label_SVK__c</columns>
        <columns>Attribute_Set_Type__c</columns>
        <columns>Synchronized__c</columns>
        <columns>Created_in_Extranet__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GTS_Location__c</field>
            <operation>equals</operation>
            <value>GTS Slovakia</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>GTS SK Products</label>
    </listViews>
    <listViews>
        <fullName>Retail</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Retail__c</columns>
        <columns>Wholesale__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Retail__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Retail</label>
    </listViews>
    <listViews>
        <fullName>Unified_Products_active</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>Wholesale__c</columns>
        <columns>Retail__c</columns>
        <columns>GTS_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Unified Products (active)</label>
    </listViews>
    <listViews>
        <fullName>Wholesale</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Wholesale__c</columns>
        <columns>Retail__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wholesale__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Wholesale</label>
    </listViews>
    <validationRules>
        <fullName>From_Date_Check</fullName>
        <active>true</active>
        <description>Checks From Date against To Date</description>
        <errorConditionFormula>IF(AND(IF(ISNULL(To_Date__c), false, true), From_Date__c &gt; To_Date__c), true, false)</errorConditionFormula>
        <errorDisplayField>From_Date__c</errorDisplayField>
        <errorMessage>From Date can not be a later date than To Date!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>To_Date_Check</fullName>
        <active>true</active>
        <description>Checks To Date against From Date</description>
        <errorConditionFormula>IF(AND(IF(ISNULL(From_Date__c), false, true), From_Date__c &gt; To_Date__c), true, false)</errorConditionFormula>
        <errorDisplayField>To_Date__c</errorDisplayField>
        <errorMessage>To Date can not be an earlier date than From Date!</errorMessage>
    </validationRules>
</CustomObject>